@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -66,8 +66,8 @@ public class IdentifierProvider implements IIdentifierProvider {
 
         Optional<IdMappingEntity> optional = this.getOrFetchByExternalId(vsmElementId);
         return optional.orElseGet(() -> this.newIdMapping(vsmElementId))
-               .getId()
-               .toString();
+                .getId()
+                .toString();
         // @formatter:on
     }
 
